--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,25 @@
       <artifactId>mchange-commons-java</artifactId>
       <version>0.2.12</version>
     </dependency>
+    <!--shiro-->
+    <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-core -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-core</artifactId>
+        <version>1.3.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-web</artifactId>
+        <version>1.3.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+        <version>1.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>microgame</finalName>
